--- a/views/properties/edit.ejs
+++ b/views/properties/edit.ejs
@@ -3,7 +3,7 @@
     <div class="col-8 offset-2">
         <br /><br />
         <h2>Edit your Details</h2>
-        <form action="/properties/<%= showProperty._id %>?_method=put" method="post" enctype="multipart/form-data">
+        <form action="/properties/<%= property._id %>?_method=put" method="post" enctype="multipart/form-data">
             
             <!-- --------------Edit  -->
 
@@ -15,50 +15,50 @@
                   type="text"
                   id="property-title"
                   name="property[title]"
-                  value="<%= showProperty.title %>"
+                  value="<%= property.title %>"
                 />
               </div>
     
               <div class="form-group">
                 <label for="price"><i class="fas fa-dollar-sign"></i> Price</label>
-                <input type="number" id="price" name="property[price]" value="<%= showProperty.price %>"/>
+                <input type="number" id="price" name="property[price]" value="<%= property.price %>"/>
               </div>
     
               <div class="form-group">
                 <label for="description"
                   ><i class="fas fa-align-left"></i> Description</label
                 >
-                <textarea id="description" name="property[description]" rows="4"><%= showProperty.description %></textarea>
+                <textarea id="description" name="property[description]" rows="4"><%= property.description %></textarea>
               </div>
     
               <div class="form-group">
                 <label for="location"
                   ><i class="fas fa-map-marker-alt"></i> Location</label
                 >
-                <input type="text" id="location" name="property[location]" value="<%= showProperty.location %>"  />
+                <input type="text" id="location" name="property[location]" value="<%= property.location %>"  />
               </div>
               <div class="form-group">
                 <label for="country"
                   ><i class="fas fa-map-marker-alt"></i> Country</label
                 >
-                <input type="text" id="country" name="property[country]" value="<%= showProperty.country %>"  />
+                <input type="text" id="country" name="property[country]" value="<%= property.country %>"  />
               </div>
     
               <div class="form-group">
                 <label for="bedrooms"><i class="fas fa-bed"></i> Bedrooms</label>
-                <input type="number" id="bedrooms" name="property[bedrooms]"  value="<%= showProperty.bedrooms %>" />
+                <input type="number" id="bedrooms" name="property[bedrooms]"  value="<%= property.bedrooms %>" />
               </div>
     
               <div class="form-group">
                 <label for="bathrooms"><i class="fas fa-bath"></i> Bathrooms</label>
-                <input type="number" id="bathrooms" name="property[bathrooms]" value="<%= showProperty.bathrooms %>"  />
+                <input type="number" id="bathrooms" name="property[bathrooms]" value="<%= property.bathrooms %>"  />
               </div>
     
               <div class="form-group">
                 <label for="square-feet"
                   ><i class="fas fa-ruler-combined"></i> Square Feet</label
                 >
-                <input type="number" id="square-feet" name="property[squarefeet]" value="<%= showProperty.squarefeet %>" />
+                <input type="number" id="square-feet" name="property[squarefeet]" value="<%= property.squarefeet %>" />
               </div>
 
               <div class="form-group">
@@ -80,7 +80,7 @@
                 <label for="seller-name"
                   ><i class="fas fa-user"></i> Seller Name</label
                 >
-                <input type="text" id="sellername" name="property[sellername]" value="<%= showProperty.sellername %>"/>
+                <input type="text" id="sellername" name="property[sellername]" value="<%= property.sellername %>"/>
               </div>
               <div class="form-group">
                 <label for="seller-contact"
@@ -90,7 +90,7 @@
                   type="text"
                   id="seller-contact"
                   name="property[sellercontact]"
-                  value="<%= showProperty.sellercontact %>"
+                  value="<%= property.sellercontact %>"
                 />
               </div>
               <button type="submit" class="submit-btn">
