--- a/views/includes/navbar2.ejs
+++ b/views/includes/navbar2.ejs
@@ -14,6 +14,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
+    <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="/css/rating.css">
     <style>
       /* Custom styles */
       .navbar {
