--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -55,25 +55,25 @@
           </div>
           <div class="form-group">
             <label>I am a:</label>
-            <label for="buyer">
+            <label for="renter">
               <input
                 type="radio"
-                id="buyer"
+                id="renter"
                 name="role"
-                value="buyer"
+                value="renter"
                 required
               />
-              Buyer
+              Renter
             </label>
-            <label for="seller">
+            <label for="propertyOwner">
               <input
                 type="radio"
-                id="seller"
+                id="propertyOwner"
                 name="role"
-                value="seller"
+                value="propertyOwner"
                 required
               />
-              Seller
+              propertyOwner
             </label>
           </div>
           <div class="form-group">
