--- a/views/properties/add_new.ejs
+++ b/views/properties/add_new.ejs
@@ -73,16 +73,32 @@
               </div>
     
               <div class="form-group">
-                <label for="property-image"
-                  ><i class="fas fa-image"></i> Property Image</label
-                >
-                <input
-                  type="file"
-                  id="property-image"
-                  name="property[image]"
-                  
-                />
-              </div>
+                <label for="property-images"><i class="fas fa-image"></i> Upload Property Images</label>
+
+                <!-- Image 1 -->
+                <div class="form-group">
+                  <label for="property-image-1">Image 1</label>
+                    <input type="file" id="property-image" name="property[image]" required />
+                </div>
+
+                <!-- Image 2 -->
+                <div class="form-group">
+                  <label for="property-image-2">Image 2</label>
+                    <input type="file" id="property-image" name="property[image]" required />
+                </div>
+
+                <!-- Image 3 -->
+                <div class="form-group">
+                  <label for="property-image-3">Image 3</label>
+                    <input type="file" id="property-image" name="property[image]" required />
+                </div>
+
+                <!-- Image 4 -->
+                <div class="form-group">
+                  <label for="property-image-4">Image 4</label>
+                    <input type="file" id="property-image" name="property[image]" required />
+                </div>
+            </div>
     
               <div class="form-group">
                 <label for="seller-name"
