--- a/views/properties/edit.ejs
+++ b/views/properties/edit.ejs
@@ -67,7 +67,7 @@
               </div>
               
 
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label for="property-image"
                   ><i class="fas fa-image"></i> uploade new Image</label>
                 <input
@@ -75,7 +75,38 @@
                   id="property-image"
                   name="property[image]"
                 />
-              </div>
+              </div> -->
+
+
+              <div class="form-group">
+                <label for="property-images"><i class="fas fa-image"></i> Upload Property Images</label>
+
+                <!-- Image 1 -->
+                <div class="form-group">
+                  <label for="property-image-1">Image 1</label>
+                    <input type="file" id="property-image" name="property[image]" />
+                </div>
+
+                <!-- Image 2 -->
+                <div class="form-group">
+                  <label for="property-image-2">Image 2</label>
+                    <input type="file" id="property-image" name="property[image]"  />
+                </div>
+
+                <!-- Image 3 -->
+                <div class="form-group">
+                  <label for="property-image-3">Image 3</label>
+                    <input type="file" id="property-image" name="property[image]" />
+                </div>
+
+                <!-- Image 4 -->
+                <div class="form-group">
+                  <label for="property-image-4">Image 4</label>
+                    <input type="file" id="property-image" name="property[image]"/>
+                </div>
+            </div>
+
+
               <div class="form-group">
                 <label for="seller-name"
                   ><i class="fas fa-user"></i> Seller Name</label
