--- a/views/properties/view_property.ejs
+++ b/views/properties/view_property.ejs
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="/css/rating.css">
+    <link rel="stylesheet" href="/css/property.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.6.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.6.0/mapbox-gl.js"></script>
   </head>
@@ -32,11 +33,16 @@
             <div class="card shadow-sm mb-5">
               <figure class="card-img-top">
                 <a href="#">
-                  <img
-                    src="<%= property.image.url %>"
-                    alt="Luxury villa in Rego Park"
-                    class="img-fluid w-100"
-                  />
+                  <div class="thumb">
+                    <div class="big-image mb-4">
+                      <img src="<%= property.image[0].url %>" class="img-fluid w-100" alt="Big Image">
+                    </div>
+                    <div class="small-images d-flex justify-content-center flex-wrap gap-3">
+                      <img src="<%= property.image[1].url %>" class="small-img img-fluid" alt="Small Image 1">
+                      <img src="<%= property.image[2].url %>" class="small-img img-fluid" alt="Small Image 2">
+                      <img src="<%= property.image[3].url %>" class="small-img img-fluid" alt="Small Image 3">
+                    </div>
+                  </div>
                 </a>
                 <div class="position-absolute top-0 start-0 badge bg-success">
                   For Rent
@@ -249,6 +255,13 @@
         </div>
       </div>
     </div>
+
+    <script>
+      function changeFeaturedImage(newImageUrl) {
+        document.getElementById('featured-image').src = newImageUrl;
+      }
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/propertyList.js"></script>
     <script src="/js/map.js"></script>
