--- a/views/properties/view_property.ejs
+++ b/views/properties/view_property.ejs
@@ -33,16 +33,18 @@
             <div class="card shadow-sm mb-5">
               <figure class="card-img-top">
                 <a href="#">
+                  <div class="details">
                   <div class="thumb">
-                    <div class="big-image mb-4">
-                      <img src="<%= property.image[0].url %>" class="img-fluid w-100" alt="Big Image">
+                    <div class="big-image">
+                      <img src="<%= property.image[0].url %>" >
                     </div>
-                    <div class="small-images d-flex justify-content-center flex-wrap gap-3">
-                      <img src="<%= property.image[1].url %>" class="small-img img-fluid" alt="Small Image 1">
-                      <img src="<%= property.image[2].url %>" class="small-img img-fluid" alt="Small Image 2">
-                      <img src="<%= property.image[3].url %>" class="small-img img-fluid" alt="Small Image 3">
-                    </div>
+                    <div class="small-images">
+                      <img src="<%= property.image[1] ? property.image[1].url : property.image[0].url %>" >
+                      <img src="<%= property.image[2] ? property.image[2].url : property.image[0].url %>" >
+                      <img src="<%= property.image[3] ? property.image[3].url : property.image[0].url %>" >
+                    </div>                    
                   </div>
+                </div>
                 </a>
                 <div class="position-absolute top-0 start-0 badge bg-success">
                   For Rent
@@ -257,11 +259,13 @@
     </div>
 
     <script>
-      function changeFeaturedImage(newImageUrl) {
-        document.getElementById('featured-image').src = newImageUrl;
-      }
+     document.querySelectorAll('.details .thumb .small-images img').forEach(images =>{
+   images.onclick = () =>{
+      src = images.getAttribute('src');
+      document.querySelector('.details .thumb .big-image img').src = src;
+   }
+});
     </script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/propertyList.js"></script>
     <script src="/js/map.js"></script>
