--- a/views/properties/index.ejs
+++ b/views/properties/index.ejs
@@ -168,7 +168,7 @@
                     a variety of options in your desired location.
                   </p>
 
-                  <a href="#" class="card-link">
+                  <a href="/properties/propertyList" class="card-link">
                     <span>Find A Home</span>
 
                     <ion-icon name="arrow-forward-outline"></ion-icon>
