--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -84,7 +84,7 @@
           </div>
         </form>
       </div>
-      <div class="features-container">
+      <!-- <div class="features-container">
         <h2>Features</h2>
         <ul>
           <li>Affordable Prices</li>
@@ -97,7 +97,7 @@
           <li>Customer-Centric</li>
           <li>24*7 Customer Support</li>
         </ul>
-      </div>
+      </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
