--- a/public/css/property.css
+++ b/public/css/property.css
@@ -36,3 +36,11 @@
 .details .thumb .small-images img:hover {
   transform: scale(1.1) !important;
 }
+
+.heart-liked {
+  background-color: red !important;
+  color: white !important; /* Ensures the heart icon remains visible */
+  border-radius: 50% !important; /* Makes the background a circle */
+  padding: 5px !important; /* Adds padding around the icon */
+}
+
