--- a/views/properties/view_property.ejs
+++ b/views/properties/view_property.ejs
@@ -98,7 +98,7 @@
                 </ul>
                 <button class="btn btn-primary mt-3" onclick="showPropertyDetails({
                   title: '<%= property.title %>',
-                  image: '<%= property.image.url %>',
+                  image: '<%= property.image[0].url %>',
                   location: '<%= property.location %>',
                   price: '<%= property.price %>',
                   description: '<%= property.description %>',
@@ -134,9 +134,10 @@
                   <button class="btn btn-outline-secondary me-2">
                     <ion-icon name="resize-outline"></ion-icon>
                   </button>
-                  <button class="btn btn-outline-danger me-2">
-                    <ion-icon name="heart-outline"></ion-icon>
+                  <button id="likeButton" class="btn btn-outline-danger me-2">
+                    <ion-icon name="heart-outline" id="heartIcon"></ion-icon>
                   </button>
+                  
                   <button class="btn btn-outline-success">
                     <ion-icon name="add-circle-outline"></ion-icon>
                   </button>
@@ -243,7 +244,7 @@
           <div class="modal-body">
             <img
               id="modal-property-image"
-              src="<%= property.image %>"
+              src="<%= property.image[0].url %>"
               alt="Property Image"
               class="img-fluid mb-3"
             />
