--- a/views/properties/propertyList.ejs
+++ b/views/properties/propertyList.ejs
@@ -12,7 +12,7 @@
           <div class="card-body">
             <p class="card-text">
               <b><%= property.title %></b> <br> 
-              &#8377;<%= property.price.toLocaleString("en-IN") %>/night
+              &#8377;<%= property.price.toLocaleString("en-IN") %>/Month
               <i class="tax-info">&nbsp; &nbsp;+18% GST</i>
             </p>
           </div>
