all work is done! ready to present

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -79,14 +79,14 @@
               <a href="property.html" class="footer-link">All Properties</a>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-link">Locations Map</a>
-            </li>
+            </li> -->
 
                 
 
             <li>
-              <a href="contact.html" class="footer-link">Contact us</a>
+              <a href="/contact" class="footer-link">Contact us</a>
             </li>
           </ul>
 
@@ -95,13 +95,13 @@
               <p class="footer-list-title">Services</p>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-link">Order tracking</a>
             </li>
 
             <li>
               <a href="#" class="footer-link">Wish List</a>
-            </li>
+            </li> -->
 
             <li>
               <a href="login.html" class="footer-link">Login</a>
@@ -115,9 +115,9 @@
               <a href="#" class="footer-link">Terms & Conditions</a>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-link">Promotional Offers</a>
-            </li>
+            </li> -->
           </ul>
 
           <ul class="footer-list">
@@ -133,13 +133,13 @@
               <a href="user.html" class="footer-link">My account</a>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-link">Wish List</a>
             </li>
 
             <li>
               <a href="#" class="footer-link">Order tracking</a>
-            </li>
+            </li> -->
 
 
             <li>
