--- a/views/properties/contactus.ejs
+++ b/views/properties/contactus.ejs
@@ -52,7 +52,7 @@
           ></a>
         </div>
       </div>
-      <form id="contact-form" action="/contact" method="post">
+      <form id="contact-form" action="/properties/contact" method="post">
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" id="name" name="Contact[name]" required />
